--- a/Sports_Review_Uni_Bi.ipynb
+++ b/Sports_Review_Uni_Bi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,40 +169,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NaiveBayes classifier UniGram:  68.88888888888889\n",
+      "NaiveBayes classifier UniGram:  71.11111111111111\n",
       "Most Informative Features\n",
-      "                  ආදරෙයි = True           positi : negati =      9.1 : 1.0\n",
-      "                    ගොන් = True           negati : positi =      5.3 : 1.0\n",
-      "                    මාලි = True           positi : negati =      4.7 : 1.0\n",
-      "                     එකේ = True           negati : positi =      4.6 : 1.0\n",
-      "                    ගන්න = True           positi : negati =      4.1 : 1.0\n",
+      "                  ආදරෙයි = True           positi : negati =      7.0 : 1.0\n",
+      "                     රටේ = True           negati : positi =      6.0 : 1.0\n",
+      "                  ලංකාවේ = True           negati : positi =      6.0 : 1.0\n",
+      "                    අපිට = True           negati : positi =      5.2 : 1.0\n",
+      "                     අනේ = True           negati : positi =      4.4 : 1.0\n",
       "\n",
-      "NaiveBayes classifier Bi-Gram :  56.666666666666664\n",
+      "NaiveBayes classifier Bi-Gram :  61.111111111111114\n",
       "Most Informative Features\n",
-      "               ගොන් ආතල් = True           negati : positi =      2.7 : 1.0\n",
-      "             ක්‍රීඩා කරන = True           negati : positi =      2.7 : 1.0\n",
-      "               දෙන්න එපා = True           positi : negati =      2.0 : 1.0\n",
-      "         ක්‍රිකට් විතරක් = True           negati : positi =      1.9 : 1.0\n",
-      "             රට වෙනුවෙන් = True           negati : positi =      1.9 : 1.0\n"
+      "            ක්‍රිකට් වලට = True           negati : positi =      2.6 : 1.0\n",
+      "               ගොන් ආතල් = True           negati : positi =      2.6 : 1.0\n",
+      "             ක්‍රීඩා කරන = True           negati : positi =      1.9 : 1.0\n",
+      "                  මේ වගේ = True           negati : positi =      1.9 : 1.0\n",
+      "          කුසල් මෙන්ඩිස් = True           negati : positi =      1.9 : 1.0\n"
      ]
     }
    ],
    "source": [
     "classifier_train_uni = NaiveBayesClassifier.train(trainning_set_uni)\n",
-    "accuracy_test_uni = nltk.classify.util.accuracy(classifier_train_uni,test_set_uni)\n",
-    "print(\"NaiveBayes classifier UniGram: \", (accuracy_test_uni * 100))\n",
+    "accuracy_nb_uni = nltk.classify.util.accuracy(classifier_train_uni,test_set_uni)\n",
+    "print(\"NaiveBayes classifier UniGram: \", (accuracy_nb_uni * 100))\n",
     "classifier_train_uni.show_most_informative_features(5)\n",
     "\n",
     "classifier_train_bi = NaiveBayesClassifier.train(trainning_set_bi)\n",
-    "accuracy_test_bi = nltk.classify.util.accuracy(classifier_train_bi,test_set_bi)\n",
-    "print(\"\\nNaiveBayes classifier Bi-Gram : \", (accuracy_test_bi * 100))\n",
+    "accuracy_nb_bi = nltk.classify.util.accuracy(classifier_train_bi,test_set_bi)\n",
+    "print(\"\\nNaiveBayes classifier Bi-Gram : \", (accuracy_nb_bi * 100))\n",
     "classifier_train_bi.show_most_informative_features(5)"
    ]
   },
@@ -218,27 +218,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Logistic Regression classifier Uni Gram:  65.55555555555556\n",
-      "Logistic Regression classifier Bi-Gram:  56.666666666666664\n"
+      "Logistic Regression classifier Uni Gram:  75.55555555555556\n",
+      "Logistic Regression classifier Bi-Gram:  57.77777777777777\n"
      ]
     }
    ],
    "source": [
     "LogisticRegression_classifier_uni = SklearnClassifier(LogisticRegression())\n",
     "LogisticRegression_classifier_uni.train(trainning_set_uni)\n",
-    "print(\"Logistic Regression classifier Uni Gram: \",(nltk.classify.accuracy(LogisticRegression_classifier_uni,test_set_uni))*100)\n",
-    "\n",
+    "accuracy_logistic_uni = nltk.classify.accuracy(LogisticRegression_classifier_uni,test_set_uni)\n",
+    "print(\"Logistic Regression classifier Uni Gram: \",accuracy_logistic_uni*100)\n",
     "\n",
     "LogisticRegression_classifier_bi = SklearnClassifier(LogisticRegression())\n",
     "LogisticRegression_classifier_bi.train(trainning_set_bi)\n",
-    "print(\"Logistic Regression classifier Bi-Gram: \",(nltk.classify.accuracy(LogisticRegression_classifier_bi,test_set_bi))*100)\n"
+    "accuracy_logistic_bi = nltk.classify.accuracy(LogisticRegression_classifier_bi,test_set_bi)\n",
+    "print(\"Logistic Regression classifier Bi-Gram: \",accuracy_logistic_bi*100)"
    ]
   },
   {
@@ -251,14 +252,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SVM classifier Uni Gram:  65.55555555555556\n",
+      "SVM classifier Uni Gram:  71.11111111111111\n",
       "SVM classifier Algo Bi-Gram:  57.77777777777777\n"
      ]
     }
@@ -266,11 +267,13 @@
    "source": [
     "LinearSVC_classifier_uni = SklearnClassifier(LinearSVC())\n",
     "LinearSVC_classifier_uni.train(trainning_set_uni)\n",
-    "print(\"SVM classifier Uni Gram: \",(nltk.classify.accuracy(LinearSVC_classifier_uni,test_set_uni))*100)\n",
+    "accuracy_svm_uni = nltk.classify.accuracy(LinearSVC_classifier_uni,test_set_uni)\n",
+    "print(\"SVM classifier Uni Gram: \",accuracy_svm_uni*100)\n",
     "\n",
     "LinearSVC_classifier_bi = SklearnClassifier(LinearSVC())\n",
     "LinearSVC_classifier_bi.train(trainning_set_bi)\n",
-    "print(\"SVM classifier Algo Bi-Gram: \",(nltk.classify.accuracy(LinearSVC_classifier_bi,test_set_bi))*100)"
+    "accuracy_svm_bi = nltk.classify.accuracy(LinearSVC_classifier_bi,test_set_bi)\n",
+    "print(\"SVM classifier Algo Bi-Gram: \",accuracy_svm_bi*100)"
    ]
   },
   {
@@ -285,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +337,7 @@
      "output_type": "stream",
      "text": [
       "අපි ඔබ සමඟ සිටිමු (Bi-Gram) : positive\n",
-      "අපිට දැන් අප්පිරියයි (Bi-Gram) : negative\n"
+      "අපිට දැන් අප්පිරියයි (Bi-Gram) : positive\n"
      ]
     }
    ],
@@ -368,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -396,15 +399,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n",
-      "0\n"
+      "අපි ඔබ සමඟ සිටිමු positive\n",
+      "අපිට දැන් අප්පිරියයි negative\n",
+      "1\n",
+      "1\n"
      ]
     }
    ],
@@ -422,15 +427,12 @@
     "                                   LogisticRegression_classifier_uni.classify(comments_dictionary),\n",
     "                                   LogisticRegression_classifier_bi.classify(comments_dictionary),\n",
     "                                   LinearSVC_classifier_uni.classify(comments_dictionary),\n",
-    "                                   LinearSVC_classifier_bi.classify(comments_dictionary)\n",
+    "                                   LinearSVC_classifier_bi.classify(comments_dictionary),\n",
+    "                                   accuracy_nb_uni,accuracy_nb_bi,\n",
+    "                                   accuracy_logistic_uni, accuracy_logistic_bi,\n",
+    "                                   accuracy_svm_uni, accuracy_svm_bi\n",
     "                                  )\n",
-    "#     print(last_classifier)\n",
-    "#     print(i+classifier_train_uni.classify(test_dict_1))\n",
-    "#     print(i+classifier_train_bi.classify(test_dict_1))\n",
-    "#     print(i+LogisticRegression_classifier_uni.classify(test_dict_1))\n",
-    "#     print(i+LogisticRegression_classifier_bi.classify(test_dict_1))\n",
-    "#     print(i+LinearSVC_classifier_uni.classify(test_dict_1))\n",
-    "#     print(i+LinearSVC_classifier_bi.classify(test_dict_1))\n",
+    "\n",
     "    \n",
     "    if (vote_classifier_output) == 'negative':\n",
     "        neg_comment_count+=1\n",
@@ -443,56 +445,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Voting_classifer(NBclassifer_Uni,NBclassifer_Bi,LR_Uni,LR_Bi,SVM_Uni,SVM_Bi):\n",
+    "def Stop_word_remover(comment):\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Voting_classifer(NBclassifer_Uni,NBclassifer_Bi,LR_Uni,LR_Bi,SVM_Uni,SVM_Bi,acc_nb_uni,acc_nb_bi,acc_lr_uni,acc_lr_bi,\n",
+    "                    acc_svm_uni,acc_svm_bi):\n",
     "    \n",
     "    positive_votes = 0\n",
     "    negative_votes = 0\n",
     "    \n",
+    "    classifier_mode = [NBclassifer_Uni,NBclassifer_Bi,LR_Uni,LR_Bi,SVM_Uni,SVM_Bi]\n",
     "    \n",
-    "    if NBclassifer_Uni == 'positive':\n",
-    "        positive_votes +=1\n",
-    "    else:\n",
-    "        negative_votes +=1\n",
-    "        \n",
-    "    if NBclassifer_Bi == 'positive':\n",
-    "        positive_votes +=1\n",
-    "    else:\n",
-    "        negative_votes +=1\n",
-    "\n",
-    "        \n",
-    "    if LR_Uni == 'positive':\n",
-    "        positive_votes +=1\n",
-    "    else:\n",
-    "        negative_votes +=1\n",
-    "        \n",
-    "    if LR_Bi == 'positive':\n",
-    "        positive_votes +=1\n",
-    "    else:\n",
-    "        negative_votes +=1    \n",
-    "        \n",
-    "        \n",
-    "    if SVM_Uni == 'positive':\n",
-    "        positive_votes +=1\n",
-    "    else:\n",
-    "        negative_votes +=1\n",
-    "        \n",
-    "    if SVM_Bi == 'positive':\n",
-    "        positive_votes +=1\n",
-    "    else:\n",
-    "        negative_votes +=1    \n",
-    "        \n",
-    "    if positive_votes>negative_votes:\n",
-    "        return 'positive'\n",
-    "    elif positive_votes<negative_votes:\n",
-    "        return 'negative'\n",
-    "    else:\n",
-    "        return 'positive'\n",
+    "    if NBclassifer_Uni == 'positive': positive_votes +=acc_nb_uni \n",
+    "    else: negative_votes +=acc_nb_uni      \n",
+    "    if NBclassifer_Bi == 'positive':positive_votes +=acc_nb_bi\n",
+    "    else:negative_votes +=acc_nb_bi      \n",
+    "    if LR_Uni == 'positive': positive_votes +=acc_lr_uni\n",
+    "    else:  negative_votes +=acc_lr_uni       \n",
+    "    if LR_Bi == 'positive':  positive_votes +=acc_lr_bi\n",
+    "    else:  negative_votes +=acc_lr_bi         \n",
+    "    if SVM_Uni == 'positive':positive_votes +=acc_svm_uni\n",
+    "    else: negative_votes +=acc_svm_uni    \n",
+    "    if SVM_Bi == 'positive': positive_votes +=acc_svm_bi\n",
+    "    else: negative_votes +=acc_svm_bi     \n",
+    "    if positive_votes>negative_votes: return ('positive')\n",
+    "    elif positive_votes<negative_votes:return ('negative')\n",
+    "    else:  return (mode(classifier_mode))\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
